@@ -1,182 +1,0 @@
-
-    "_comment": "# ORES",
-    "item.mmorpg.ore0": "Common Ore",
-    "item.mmorpg.ore1": "Uncommon Ore",
-    "item.mmorpg.ore2": "Rare Ore",
-    "item.mmorpg.ore3": "Epic Ore",
-    "item.mmorpg.ore4": "Legendary Ore",
-    "item.mmorpg.ore5": "Mythical Ore",
-	
-	"item.mmorpg.hearthstone.0": "Common Hearthstone",
-    "item.mmorpg.hearthstone.1": "Uncommon Hearthstone",
-    "item.mmorpg.hearthstone.2": "Rare Hearthstone",
-    "item.mmorpg.hearthstone.3": "Epic Hearthstone",
-    "item.mmorpg.hearthstone.4": "Legendary Hearthstone",
-    "item.mmorpg.hearthstone.5": "Mythical Hearthstone",	
-
-    "block.mmorpg.ore_block0": "Common Ore Block",
-    "block.mmorpg.ore_block1": "Uncommon Ore Block",
-    "block.mmorpg.ore_block2": "Rare Ore Block",
-    "block.mmorpg.ore_block3": "Epic Ore Block",
-    "block.mmorpg.ore_block4": "Legendary Ore Block",
-    "block.mmorpg.ore_block5": "Mythical Ore Block",
-
-	"block.mmorpg.attunement_altar": "Attunement Altar",
-
-    "_comment": "# CREATIVE TAB",
-    "itemGroup.mmorpg_main": "Mine and Slash",
-    "itemGroup.mmorpg_uniques": "Unique Gear",
-    "itemGroup.mmorpg_currency": "Crafting Items",
-    "itemGroup.mmorpg_lootboxes": "LootBoxes",
-
-    "_comment": "STATIONS",
-    "block.mmorpg.modify_station": "Gear Modify Station",
-    "block.mmorpg.repair_station": "Gear Repair Station",
-    "block.mmorpg.salvage_station": "Gear Salvage Station",
-    "block.mmorpg.map_device": "Map Device",
-
-    "_comment": "ITEM TOOLTIPS",
-	"mmorpg.tooltip.item_modifiable_in_station": "Can be used inside Gear Modify Station",
-	"mmorpg.tooltip.lootbox": "What could be inside?",   
-    "mmorpg.tooltip.ore": "Precious Ore that can be used in many ways",
-    "mmorpg.tooltip.player_levelup": "If your experience bar is full, use this item to levelup!",
-    "mmorpg.tooltip.newbie_gear_bag": "Creates a pack of level one gear.",
-    "mmorpg.lore.newbie_gear_bag1": "Three Furnaces below, five iron wills above,",
-    "mmorpg.lore.newbie_gear_bag2": "seed in the middle, materialize hope!",
-    "mmorpg.tooltip.capacitor": "Put Inside Repair Station to decrease fuel consumption.",
-    "mmorpg.tooltip.capacitor2": "Fuel Multiplier",
-    "mmorpg.tooltip.socketable_item": "This Gem can be inserted into a Socket slot",
-
-    "_comment": "RARITY ITEM NAMES",
-	
-
-    "item.mmorpg.map.map0": "§7Adventure Map",
-    "item.mmorpg.map.map1": "§aAdventure Map",
-    "item.mmorpg.map.map2": "§eAdventure Map",
-    "item.mmorpg.map.map3": "§9Adventure Map",
-    "item.mmorpg.map.map4": "§6Adventure Map",
-    "item.mmorpg.map.map5": "§dAdventure Map",
-
-    "_comment": "MISC ITEMS",
-    "item.mmorpg.player_levelup": "Player Level Up Token",
-    "item.mmorpg.loot_bag": "Gear Loot Bag",
-    "item.mmorpg.map_bag": "Map Bag",
-    "item.mmorpg.currency_bag": "Currency Bag",
-    "item.mmorpg.newbie_gear_bag": "Newbie Gear Bag",
-    "item.mmorpg.tutorial_book": "Mine and Slash Tutorial",
-    "item.mmorpg.map_back_portal": "Map Leave Pearl",
-    "item.mmorpg.level_nearest_entity": "Level Nearest Entity",
-    "item.mmorpg.increase_rarity_nearest_entity": "Increase Rarity Nearest Entity",
-    "item.mmorpg.awaken_runeword": "§cAwaken RuneWord",
-
-    "_comment": "STATUS EFFECTS",
-    "effect.mmorpg.self_regen": "Regen Health",
-    "effect.mmorpg.mana_regen": "Regen Mana",
-    "effect.mmorpg.energy_regen": "Regen Energy",
-    "effect.mmorpg.aoe_regen": "Aoe Regen",
-    "effect.mmorpg.cleanse_poison": "Cleanse Poison",
-
-    "_comment": "SPELL TOOLTIPS",
-    "mmorpg.tooltip.aoe_spell_explosion": "Casts an elemental projectile that does AOE dmg on hit.",
-    "mmorpg.tooltip.single_target_spell_bolt": "Casts a Single Target elemental projectile.",
-    "mmorpg.tooltip.spell_instant_heal": "Instantly Heals the caster.",
-    "mmorpg.tooltip.spell_self_regen": "Heals the caster over time.",
-
-    "_comment": "REPAIR CAPACITORS",
-    "item.mmorpg.capacitor0": "Common Capacitor",
-    "item.mmorpg.capacitor1": "Uncommon Capacitor",
-    "item.mmorpg.capacitor2": "Rare Capacitor",
-    "item.mmorpg.capacitor3": "Epic Capacitor",
-    "item.mmorpg.capacitor4": "Legendary Capacitor",
-    "item.mmorpg.capacitor5": "Mythical Capacitor",
-
-    "_comment": "ITEM TOOLTIPS",
-    
-    "_comment": "MAPS",
-    "mmorpg.name.map": "Adventure Map",
-    "mmorpg.tooltip.put_in_mapdevice": "Put in Map Device to Use",
-
-    "_comment": "CONFIG",
-    "mmorpg.config.client": "Client",
-    "mmorpg.config.server": "Server",
-    "mmorpg.config.droprates": "Droprates",
-    "mmorpg.config.title": "Mine and Slash",
-    "mmorpg.config.lenghty_gear_tooltips": "Lenghty Gear Tooltips",
-    "mmorpg.config.non_mod_heal_multi": "Non Mod Heal Multiplier",
-    "mmorpg.config.other_entity": "Other Entities",
-    "mmorpg.config.maps_start_drop": "Maps Start To Drop at Lvl",
-    "mmorpg.config.unarmed_energy_cost": "Unarmed Energy Cost",
-    "mmorpg.config.currency_start_drop": "Currency Start To Drop at Lvl",
-    "mmorpg.config.rarity_weights": "Rarity Weights",
-    "mmorpg.config.map_id_start": "Map ID Start",
-    "mmorpg.config.map_id_reserved": "Map IDs Reserved",
-    "mmorpg.config.map_dimensions_config": "Map Dimensions Config",
-
-    "_comment": "CONFIG ENTITIES",
-
-    "mmorpg.config.loot_multi": "Loot Multiplier",
-    "mmorpg.config.exp_multi": "Experience Multiplier",
-
-    "_comment": "CONFIG DROPRATES",
-    "mmorpg.config.currency_droprate": "Currency Droprate",
-    "mmorpg.config.spell_droprate": "Spell Droprate",
-    "mmorpg.config.map_droprate": "Map Droprate",
-    "mmorpg.config.unique_droprate": "Unique Droprate",
-    "mmorpg.config.gear_droprate": "Gear Droprate",
-
-    "_comment": "CONFIG CLIENT",
-    "mmorpg.config.item_on_ground_particles": "Item on Ground Rarity Particles",
-    "mmorpg.config.chat_combat_log": "Show Chat Combat Log",
-    "mmorpg.config.floating_damage_numbers": "Show Floating Damage",
-    "mmorpg.config.mob_health_bag": "Show Mob Health Bar",
-    "mmorpg.config.low_resource_warnings": "Show low Resource (mana, energy) Warnings",
-    "mmorpg.config.floating_exp": "Show floating exp",
-    "mmorpg.config.player_gui_overlay_type": "Player GUI overlay type",
-
-    "_comment": "CONFIG SERVER",
-    "mmorpg.config.mob_lvl_per_distance": "Mob Lvl Per Distance",
-    "mmorpg.config.mob_lvl_one_area": "Mob Lvl 1 Area",
-    "mmorpg.config.player_level_cap": "Player Lvl Cap",
-    "mmorpg.config.normal_world_max_lvl_cap": "Normal World Mob Lvl Cap",
-    "mmorpg.config.exp_multiplier": "Exp Multiplier",
-    "mmorpg.config.levelup_cost_token": "Level ups cost tokens",
-    "mmorpg.config.max_players_in_map": "Max Players in Map",
-    "mmorpg.config.entities_under_system": "Entities under System",
-    "mmorpg.config.non_mod_damage_multiplier": "Non Mod Damage Multiplier",
-    "mmorpg.config.maximum_mob_level": "Maximum Mob Level",
-    "mmorpg.config.minimum_mob_level": "Minimum Mob Level",
-    "mmorpg.config.dimension_id": "Dimension ID",
-    "mmorpg.config.items_under_system": "Items Under System",
-    "mmorpg.config.crafted_items_are_under_system": "Crafted Items are Under System",
-
-    "mmorpg.tooltip.press_shift_more_info": "[Shift]: Info, [Ctrl]: Show Enchants",
-    "mmorpg.tooltip.affix_rarity_lootbonus": "Affix Rarity Loot Bonus",
-
-    "_comment": "Auto Salvage Bags",
-    "item.mmorpg.auto_salvage_bag0": "§7Auto Salvage Bag",
-    "item.mmorpg.auto_salvage_bag1": "§aAuto Salvage Bag",
-    "item.mmorpg.auto_salvage_bag2": "§eAuto Salvage Bag",
-    "item.mmorpg.auto_salvage_bag3": "§9Auto Salvage Bag",
-    "item.mmorpg.auto_salvage_bag4": "§6Auto Salvage Bag",
-    "item.mmorpg.auto_salvage_bag5": "§dAuto Salvage Bag",
-      
-    "_comment": "rune tooltip",
-
-    "mmorpg.tooltip.stats_on_weapon": "Stats on Weapon",
-    "mmorpg.tooltip.stats_on_armor": "Stats on Armor",
-    "mmorpg.tooltip.stats_on_jewerly": "Stats on Jewerly",
-
-    "mmorpg.tooltip.place_in_modify": "Place in Item Modify Table",
-    "mmorpg.tooltip.unlocks_runeword_combo": "Unlocks runeword combination",
-
-    "mmorpg.tooltip.auto_salvage_items": "Automatically salvages items",
-    "mmorpg.tooltip.sal_info": "Press Shift For Setup Info",
-    "mmorpg.tooltip.sal1": "Place An Item Of Maximum Rarity You want to",
-    "mmorpg.tooltip.sal2": "salvage in your off-hand.",
-    "mmorpg.tooltip.sal3": "Then right click with this bag.",
-    "mmorpg.tooltip.sal4": "To Not Salvage Any Items, clear the config by",
-    "mmorpg.tooltip.sal5": "Right Clicking the bag while shield slot is empty.",	
-	
-	"item.mmorpg.consumable.restore_energy_item": "Energy potion",
-	"item.mmorpg.consumable.restore_mana_item": "Mana potion",
-	
