@@ -4,6 +4,7 @@ import com.robertx22.mine_and_slash.database.rarities.mobs.EpicMob;
 import com.robertx22.mine_and_slash.database.rarities.mobs.LegendaryMob;
 import com.robertx22.mine_and_slash.database.rarities.mobs.MythicalMob;
 import com.robertx22.mine_and_slash.database.rarities.mobs.RareMob;
+import com.robertx22.mine_and_slash.new_content.registry.MobPotionEffects;
 import com.robertx22.mine_and_slash.onevent.entity.OnMobSpawn;
 import com.robertx22.mine_and_slash.registry.ISlashRegistryEntry;
 import com.robertx22.mine_and_slash.registry.SlashRegistryType;
@@ -15,6 +16,9 @@ import com.robertx22.mine_and_slash.uncommon.utilityclasses.WorldUtils;
 import net.minecraft.entity.EntityType;
 import net.minecraft.entity.MobEntity;
 import net.minecraft.entity.SpawnReason;
+import net.minecraft.entity.monster.SlimeEntity;
+import net.minecraft.nbt.CompoundNBT;
+import net.minecraft.potion.EffectInstance;
 import net.minecraft.util.math.BlockPos;
 import net.minecraft.util.text.ITextComponent;
 import net.minecraft.world.IWorld;
@@ -96,6 +100,17 @@ public abstract class MapEvent implements ISlashRegistryEntry<MapEvent> {
         Load.Unit(elite)
             .setRarity(RandomUtils.weightedRandom(Arrays.asList(MythicalMob.getInstance(), LegendaryMob.getInstance(), EpicMob.getInstance(), RareMob.getInstance()))
                 .Rank());
+
+        if (RandomUtils.roll(25)) {
+            elite.addPotionEffect(new EffectInstance(MobPotionEffects.getRandom(), Integer.MAX_VALUE, RandomUtils.RandomRange(1, 3)));
+        }
+
+        if (elite instanceof SlimeEntity) {
+            SlimeEntity slime = (SlimeEntity) elite;
+            CompoundNBT nbt = slime.serializeNBT();
+            nbt.putInt("Size", 10);
+            slime.deserializeNBT(nbt);
+        }
 
         world.addEntity(elite);
 
